
2000-11-21-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can copy and insert in same time (For the moment just for column/row)

2000-11-22-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread understands complex number
you can add /sub complex number
COMPLEX, IMREAL, IMAGINARY, IMSUB, IMSUM

2000-11-28-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY

2000-12-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new functions IMCOS, IMSIN, IMPOWER, IMSQRT, IMEXP, IMLN
Add new functions ISEVEN, ISODD, ODD, EVEN, DELTA

2000-12-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can validate on integer
Now you can validate on text length ( when value is a string)
Add RANDBETWEEN function

2000-12-05-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide/show column/row

2000-12-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can configure the number of page when you begin kspread (when you don't specify
a file name)

2000-12-11-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide/show col/row header

2000-12-18-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can define what you want to write in statusbar when you select
an area:
	sum
	average
	count
	min
	max
you can configure it in "Configure dialogBox" -> misc

2000-12-27-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can see what you print with "Preview"
I used ghostview.