@@ -1131,3 +1131,7 @@ you can configure it in "Configure dialogBox" -> misc
 ----------------------------------------------------
 -Now you can see what you print with "Preview"
 I used ghostview.
+
+2000-12-29-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+-Now you can change default grid color
